--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-	<form method="POST" action="https://formspree.io/YOUREMAILHERE">
+	<form method="POST" action="https://formspree.io/karahdailey@gmail.com">
 	  <input type="email" name="email" placeholder="Your email">
 	  <textarea name="message" placeholder="Test Message"></textarea>
 		<label for="name">Name:</label>
